--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="container">
  		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
-            <a class = "navbar-brand" href = "homepage-static.html">Watchlist App</a>
+            <a class = "navbar-brand" href = "index.html">Watchlist App</a>
             <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
                data-target = "#navbarSupportedContent" 
                aria-controls = "navbarSupportedContent" aria-expanded = "false" 
@@ -25,7 +25,7 @@
             <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
                <ul class = "navbar-nav mr-auto">
                   <li class = "nav-item">
-                     <a class = "nav-link active" href = "homepage-static.html">Home</a>
+                     <a class = "nav-link active" href = "index.html">Home</a>
                   </li>
                   <li class = "nav-item">
                      <a class = "nav-link" href = "watchlist-static.html">Watchlist</a>
