--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-
-<html
-        lang="en"
->
-
+<html class="h-100" lang="en">
 <head>
     <!-- Meta tags -->
     <meta charset="utf-8">
@@ -11,53 +7,80 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <title>Pay My Buddy App</title>
 
-    <title>PayMyBuddy App</title>
 </head>
 
-<body>
-<div class="container">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
-        <a class="navbar-brand" href="homepage.html">PayMyBuddy</a>
-        <button
-                class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"
-        >
+    <body class="text-center" style="display:flex; height: 100%;">
+        <div class="container">
+            <nav class="navbar navbar-dark bg-light navbar-expand" style="width: 100%;">
 
-            <span class="navbar-toggler-icon"></span>
-        </button>
+                <div class="container" >
+                    <a class="navbar navbar-brand bg-success " style="padding: 10px; border-radius: 5px;
+                    font-size: x-large;"href="homepage.html ">PayMyBuddy</a>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="homepage.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" hhref="homepage.html">Transfer</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link"href="homepage.html">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mailto:contact@paymybuddy.com">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="watchlist-static.html">Log off</a>
-                </li>
-            </ul>
+                    <nav class=" d-inline-flex mt-2 mt-md-0 ms-md-auto" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
 
+                            <li class="nav-tabs ui-state-hover">
+                                <a
+                                        class="nav-link active " style="color: black; font-size: x-large; "
+                                        href="homepage.html"
+                                >Home</a>
+                            </li>
+
+                            <li class="nav-tabs ui-state-hover">
+                                <a
+                                        class="nav-link active" style="color: black;font-size: x-large; "
+                                        href="homepage.html"
+                                >
+                                    Transfer</a>
+                            </li>
+
+                            <li class="nav-tabs ui-state-hover">
+                                <a
+                                        class="nav-link active" style="color: black;font-size: x-large;"
+                                        href="homepage.html"
+                                >Profile
+                                </a>
+                            </li>
+
+                            <li class="nav-tabs">
+                                <a
+                                        class="nav-link active" style="color: black;font-size: x-large;"
+                                        href="mailto:contact@paymybuddy.com"
+                                >Contact</a>
+                            </li>
+
+                            <li class="nav-tabs">
+                                <a
+                                        class="nav-link active" style="color: black; font-size: x-large;"
+                                        href="watchlist-static.html"
+                                >Log off</a>
+                            </li>
+                        </ul>
+
+                    </nav>
+                </div>
+            </nav>
+            <main>
+                <div class="container" >
+                    <div class="text-light">
+                    </div>
+
+                    <div class="row " style="background-color: #F5F5F5; ">
+                        <h2 class="text-success" style="padding-left: 20px; font-weight: lighter">Balance:
+
+                            <span> € </span>
+                        </h2>
+                    </div>
+                </div>
+            </main>
+
+                <div class="row justify-content-center">
+
+                </div>
         </div>
-    </nav>
-    <h2 class="mt-4">Welcome to the Watchlist application!</h2> <br>
-    <h5>Made for movie lovers who have a hard time choosing their next movie to watch.</h5>
 
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-</body>
+    </body>
 </html>
