--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,22 +12,19 @@
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             rel="stylesheet"
     >
-
+    <title>Pay My Buddy Login Account</title>
 
 
     <body class="text-center" style="text-align: center !important; display: flex; align-items: center; padding-top:
-    20px;
-    padding-bottom: 60px; padding-right:200px; height: 100%; margin: 0; background-color: #f5f5f5">
+    20px; padding-bottom: 60px; padding-right:200px; height: 100%; margin: 0; background-color: #f5f5f5">
 
         <main class="form-signin" style="width:100%; max-width:330px; padding: 15px;margin: auto" >
 
 
         <div class="container card" style="width: 30rem;">
 
-            <center><h2><span class="badge badge-success">Pay My Buddy</span></h2></center>
+            <center><h2><span class="badge badge-success" style="margin-top: 20px;margin-bottom: 20px; padding: 10px">Pay My Buddy</span></h2></center>
 
-            <br>
-            <br>
 
             <div class=" container form-group w-24">
             <form class="box sizing" style="box-sizing: border-box; text-align: center !important;">
@@ -48,7 +45,7 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+                <button class="w-100 btn btn-lg btn-primary" type="submit" style="margin-bottom: 10px">Login</button>
 
             </form>
             </div>
