--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -1,179 +1,120 @@
 <!DOCTYPE html>
-<html class="h-100" lang="en">
+<html class="h-100" lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
 <head>
-    <!-- Meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width = device-width, initial-scale = 1, shrink-to-fit = no">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <!-- Meta tags -->
+    <link
+            crossorigin="anonymous"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            rel="stylesheet"
+    >
+    <meta charset="utf-8">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <title>Pay My Buddy App</title>
-
+    <title>Pay My Buddy Homepage</title>
 </head>
 
-    <body class= "h-100;">
-        <nav class="navbar navbar-dark bg-white navbar-expand">
-            <div class="container" >
-                <div class="navbar navbar-brand bg-success" style="padding: 10px; border-radius: 5px">
-                    PayMyBuddy
-                </div>
 
-                <div class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <ul class="navbar-nav">
+<body class="h-100;">
+<!-- Navigation tab config -->
+<nav class="navbar navbar-dark navbar-expand" style="background-color: #e9ecef">
+    <div class="container">
+        <div class="navbar-brand bg-success" style="padding: 10px; border-radius: 5px">
+            PayMyBuddy
+        </div>
 
-                        <li class="nav-tabs ui-state-hover">
-                            <a
-                                    class="nav-link active " style="color: black; font-size: x-large; "
-                                    href="homepage.html"
-                            >Home</a>
-                        </li>
+        <div class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+            <ul class="navbar-nav">
 
-                        <li class="nav-tabs ui-state-hover">
-                            <a
-                                    class="nav-link active" style="color: black;font-size: x-large; "
-                                    href="homepage.html"
-                            >
-                                Transfer</a>
-                        </li>
+                <li class="nav-item ">
+                    <a class="nav-link" style="color: black;font-size: larger;"
+                       th:href="@{/homepage}">Home
+                    </a>
+                </li>
 
-                        <li class="nav-tabs ui-state-hover">
-                            <a
-                                    class="nav-link active" style="color: black;font-size: x-large;"
-                                    href="homepage.html"
-                            >Profile
-                            </a>
-                        </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: black;font-size: larger;"
+                            th:href="@{/transfer}">Transfer
+                    </a>
+                </li>
 
-                        <li class="nav-tabs">
-                            <a
-                                    class="nav-link active" style="color: black;font-size: x-large;"
-                                    href="mailto:contact@paymybuddy.com"
-                            >Contact</a>
-                        </li>
+                <li class="nav-item">
+                    <a  class="nav-link " style="color: black;font-size:
+                    larger;"
+                            th:href="@{/profile}">Profile
+                    </a>
+                </li>
 
-                        <li class="nav-tabs">
-                            <a
-                                    class="nav-link active" style="color: black; font-size: x-large;"
-                                    href="watchlist-static.html"
-                            >Log off</a>
-                        </li>
-                    </ul>
-                </div>
+                <li class="nav-item">
+                    <a class="nav-link "  style="color: black;font-size: larger;"
+                            href="mailto:admin@paymybuddy.com">Contact
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;"
+                            th:href="@{/logout}">Log off
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+    <div class="container h-100">
+        <!-- Welcome + firstname User-->
+        <h1 class="text-success fw-light" >Welcome
+            <span class="text-secondary fw-light" th:text="${user}"></span>
+        </h1>
+        <!-- Section Balance -->
+        <div class="h-100" style="background-color: #F5F5F5; ">
+            <h2 class="text-success fw-light"> Balance:
+                <span class="text-secondary fw-light" th:text="${balance}"></span>
+                <span class="text-secondary fw-light">€</span>
+            </h2>
+        </div>
+        <br>
+
+
+        <!-- Table of transaction -->
+
+        <hr class="text-white">
+        <div class="row">
+            <h4 class=" text-dark " style="margin-left:25px; margin-bottom: -10px;">My transactions</h4>
+        </div>
+
+
+        <hr class="text-white">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <table class="table table-secondary table-bordered table-striped table-hover text-center">
+                    <thead class="table-success">
+                    <tr>
+                        <th class="text-center">Date</th>
+                        <th class="text-center">Contacts</th>
+                        <th class="text-center">Amount</th>
+                        <th class="text-center">Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    <tr th:each="transaction : ${transactions}">
+                        <td th:text="${transaction.getDate()}"></td>
+                        <td th:text="${transaction.getRecipientUser().getFirstName() + ' '+ transaction.getRecipientUser().getLastName()}"></td>
+                        <td th:text="${transaction.getAmountTransaction()}+'€'"></td>
+                        <td th:text="${transaction.getDescription()}"></td>
+                    </tr>
+                    </tbody>
+
+                </table>
             </div>
-        </nav>
-        <main>
-
-            <div class="container h-100" >
-                <div class="text-light"></div>
-
-                <!-- Section Balance -->
-                <div class="row" style="background-color: #F5F5F5; ">
-                    <h2 class="text-success" style="padding-left: 5px; font-weight: lighter">
-                        Balance: <span> € </span>
-                    </h2>
-                </div>
-                <br>
-
-                <!-- Section Add Connection -->
-                <div class="row">
-                    <div class="col align-self">
-                        <hr class="text-white">
-                        <div class="row">
-                            <div class="col ">
-                                 <h4 class=" text-dark text-start-center" style="margin-left:10px; margin-top:5px">
-                                     Send Money</h4>
-                            </div>
-                            <div class="col ">
-                                <button class="btn btn-primary btn-float-right" style="display: block; float: right;
-                                margin-right: 25px "
-                                        type="submit">Add Contact</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        </div>
+    </div>
 
 
-                <div class="row justify-content-center"></div>
-
-                <!--Section Send Money-->
-
-                <div class="row bg-light p-5 m-3">
-                    <div class="row justify-content-center">
-                        <div class="container">
-                            <form
-                                    action="#" class="justify-content-center" method="post"
-                                    th:action="@{/transactions}"
-                                    th:object="${transaction}"
-                            >
-                                <div class="row">
-
-                                    <!-- Selector fo contact transaction-->
-                                    <div class="col" style=" top: 5px">
-                                        <select class="form-select" th:field="*{recipientUser}">
-                                            <option
-                                                    th:each="contacts : ${}"
-                                                    th:text="${}" th:value="${}"
-                                            >Select A Contact
-                                            </option>
-                                        </select>
-                                    </div>
-                                    <!-- Selector amount to contact transaction-->
-                                    <div class="col input-group">
-                                        <input class="form-control" placeholder="Amount" th:field="*{amount}"
-                                               type="number">
-                                        <span class="input-group-text">€</span>
-                                    </div>
-                                    <!-- Champ Description-->
-                                    <div class="col">
-                                        <input class="form-control" placeholder="Description" th:field="*{description}" type="text">
-                                    </div>
-                                    <!-- Pay Bouton -->
-                                    <div class="col text-center" >
-                                        <button class="col-10 btn btn-success " type="submit">Pay
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- Table of transaction -->
-
-                <hr class="text-white">
-                <div class="row">
-                    <h4 class=" text-dark "style="margin-left:25px; margin-bottom: -10px;">My transactions</h4>
-                </div>
-
-
-                <hr class="text-white">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <table class="table table-secondary table-bordered table-striped table-hover text-center">
-                            <thead class="table-success">
-                            <tr>
-                                <th class="text-center">Date</th>
-                                <th class="text-center">Contacts</th>
-                                <th class="text-center">Amount</th>
-                                <th class="text-center">Description</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="tempTransaction : ${}">
-                                <td th:text="${}" />
-                                <td th:text="${}" />
-                                <td th:text="${}+'€'" />
-                                <td th:text="${}" />
-
-                            </tr>
-                            </tbody>
-
-                        </table>
-                    </div>
-               </div>
-            </div>
-        </main>
-
-    </body>
+</body>
 </html>
