--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html class="h-100"  lang="en">
+<html class="h-100" lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,13 +13,16 @@
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             rel="stylesheet"
     >
-    <title>Pay My Buddy Login Account</title>
+    <meta charset="utf-8">
+    <title>Login App</title>
+</head>
+
 
 
     <body class="text-center" style="text-align: center !important; display: flex; align-items: center; padding-top:
     20px; padding-bottom: 60px; padding-right:200px; height: 100%; margin: 0; background-color: #f5f5f5">
 
-        <main class="form-signin" style="width:100%; max-width:330px; padding: 15px;margin: auto" >
+        <main class="form-signing" style="width:100%; max-width:330px; padding: 15px;margin: auto" >
 
 
         <div class="container card" style="width: 30rem;">
@@ -27,16 +31,22 @@
 
 
             <div class=" container form-group w-24">
-            <form class="box sizing" style="box-sizing: border-box; text-align: center !important;">
+            <form th:action="@{login}" method="post"
+                    class="box sizing" style="box-sizing: border-box; text-align: center !important;">
+
+                <div th:if="${param.error}">
+                    <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+                </div>
 
 
                 <div class="form-floating">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="Email">
+                    <input type="email" name="email" class="form-control" id="floatingInput" placeholder="Email">
                     <label for="floatingInput"></label>
                 </div>
 
                 <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <input type="password" name="password" class="form-control" id="floatingPassword"
+                           placeholder="Password">
                     <label for="floatingPassword"></label>
                 </div>
 
@@ -46,20 +56,13 @@
                     </label>
                 </div>
                 <button class="w-100 btn btn-lg btn-primary" type="submit" style="margin-bottom: 10px">Login</button>
+                <a th:href="@{/registration}">Registration</a>
 
             </form>
             </div>
         </div>
         </main>
     </body>
-
-
-
-
-
-
-
-
 
 
 </html>
