Fonction Add Iban + Delete fix

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -56,7 +56,7 @@
 
                 <li class="nav-item">
                     <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;"
-                            th:href="@{/logout}">Log off
+                            th:href="@{/login}">Log off
                     </a>
                 </li>
             </ul>
