--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -37,26 +37,26 @@
 
                 <li class="nav-item">
                     <a class="nav-link" style="color: black;font-size: larger;"
-                            th:href="@{/transfer}">Transfer
+                       th:href="@{/transfer}">Transfer
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a  class="nav-link " style="color: black;font-size:
                     larger;"
-                            th:href="@{/profile}">Profile
+                        th:href="@{/profile}">Profile
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link "  style="color: black;font-size: larger;"
-                            href="mailto:admin@paymybuddy.com">Contact
+                       href="mailto:admin@paymybuddy.com">Contact
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;"
-                            th:href="@{/logout}">Log off
+                       th:href="@{/login}">Log off
                     </a>
                 </li>
             </ul>
