Fix PayMyBuddy Application bis

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -17,39 +17,39 @@
 
 </head>
 <body class="h-100">
-    <nav class="navbar navbar-dark navbar expand" style="background-color: #e9ecef">
-        <div class="container">
-            <div class="navbar-brand bg-success" style="padding: 10px; border-radius: 5px">
-                User Management System
-            </div>
-        </div>
-
-
-        </nav>
+<nav class="navbar navbar-dark navbar expand" style="background-color: #e9ecef">
     <div class="container">
-        <hr>
-        <h3>Save User</h3>
-
-        <form action="#" th:action="@{/save}" th:object = "${user}" method="get">
-            <input type="text" th:field = "*{firstName}"
-                   placeholder="FirstName"
-                   class ="form-control mb-4 col-3">
-            <input type="text" th:field = "*{lastName}"
-                   placeholder="LastName"
-                   class ="form-control mb-4 col-3">
-            <input type="text" th:field = "*{email}"
-                   placeholder="email"
-                   class ="form-control mb-4 col-3">
-            <input type="password" th:field = "*{password}"
-                   placeholder="password"
-                   class ="form-control mb-4 col-3">
-
-
-            <button type="submit" class="btn btn-info col-1"> Save</button>
-            <a style="padding-left: 120px" th:href="@{/login}">Login</a>
-
-        </form>
+        <div class="navbar-brand bg-success" style="padding: 10px; border-radius: 5px">
+            User Management System
+        </div>
     </div>
+
+
+</nav>
+<div class="container">
+    <hr>
+    <h3>Save User</h3>
+
+    <form action="#" th:action="@{/save}" th:object = "${user}" method="post">
+        <input type="text" th:field = "*{firstName}"
+               placeholder="FirstName"
+               class ="form-control mb-4 col-3">
+        <input type="text" th:field = "*{lastName}"
+               placeholder="LastName"
+               class ="form-control mb-4 col-3">
+        <input type="text" th:field = "*{email}"
+               placeholder="email"
+               class ="form-control mb-4 col-3">
+        <input type="password" th:field = "*{password}"
+               placeholder="password"
+               class ="form-control mb-4 col-3">
+
+
+        <button type="submit" class="btn btn-info col-1"> Save</button>
+        <a style="padding-left: 120px" th:href="@{/login}">Login</a>
+
+    </form>
+</div>
 
 
 </body>
