--- a/src/main/resources/templates/accountregistration.html
+++ b/src/main/resources/templates/accountregistration.html
@@ -13,37 +13,29 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           rel="stylesheet"
   >
-
-
 </head>
-<body class="h-100">
-<nav class="navbar navbar-dark navbar expand" style="background-color: #e9ecef">
-  <div class="container">
-    <div class="navbar-brand bg-success" style="padding: 10px; border-radius: 5px">
-      User Management System
+  <body class="h-100">
+    <nav class="navbar navbar-dark navbar expand" style="background-color: #e9ecef">
+      <div class="container">
+        <div class="navbar-brand bg-success" style="padding: 10px; border-radius: 5px">
+          User Management System
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+        <hr>
+       <h3>Save Account</h3>
+           <form action="#" th:action="@{/accounts/save}" method="get">
+           <br>
+              <input type="text" th:name = "iban"
+                     placeholder="iban"
+                     class ="form-control mb-4 col-3">
+                  <button type="submit" class="btn btn-info col-1"> Save</button>
+
+              <a style="padding-left: 120px" th:href="@{/profile}">return to Profile</a>
+          </form>
     </div>
-  </div>
 
-
-</nav>
-<div class="container">
-  <hr>
-  <h3>Save Account</h3>
-
-  <form action="#" th:action="@{/accounts/save}" th:object="${account}" method="get">
-    <br>
-    <input type="text" th:name = "iban"
-           placeholder="iban"
-           class ="form-control mb-4 col-3">
-
-
-
-    <button type="submit" class="btn btn-info col-1"> Save</button>
-    <a style="padding-left: 120px" th:href="@{/profile}">return to Profile</a>
-
-  </form>
-</div>
-
-
-</body>
+  </body>
 </html>
